--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,5 +30,10 @@ jobs:
     - name: Run tests
       run: make test
     
+    - name: Install golangci-lint
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
+        echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+    
     - name: Run lint
       run: make lint
