--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,22 @@
-name: CI/CD Pipeline
+name: Build and Push
 
 on:
   push:
-    # branches:
-    #   - main
     tags:
       - 'v*'
-  # pull_request:
-  #   branches:
-  #     - main
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: klimeurt/secflow-collector
 
 jobs:
-  test:
-    name: Test
+  build-and-push:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -41,21 +40,6 @@ jobs:
     - name: Run tests
       run: make test
 
-  build-and-push:
-    name: Build and Push Docker Image
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
@@ -72,13 +56,9 @@ jobs:
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=ref,event=branch
-          type=ref,event=pr
           type=semver,pattern={{version}}
           type=semver,pattern={{major}}.{{minor}}
           type=semver,pattern={{major}}
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
