Refactor into microservices architecture with collector and validator services
- Split monolithic application into two services: collector and validator
- Move collector logic to internal/collector package with scanner and repository modules
- Add validator service that processes repositories and validates appsec-config.yml
- Update CI workflow to build both collector and validator Docker images
- Update Makefile to support building both services
- Add comprehensive test coverage for all modules
- Update documentation to reflect new architecture

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,12 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: klimeurt/secflow-collector
+  COLLECTOR_IMAGE_NAME: klimeurt/secflow-collector
+  VALIDATOR_IMAGE_NAME: klimeurt/secflow-validator
 
 jobs:
-  build-and-push:
-    name: Build and Push Docker Image
+  build-and-push-collector:
+    name: Build and Push Collector Docker Image
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -50,26 +51,92 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Extract metadata
-      id: meta
+    - name: Extract collector metadata
+      id: collector-meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        images: ${{ env.REGISTRY }}/${{ env.COLLECTOR_IMAGE_NAME }}
         tags: |
           type=semver,pattern={{version}}
           type=semver,pattern={{major}}.{{minor}}
           type=semver,pattern={{major}}
           type=raw,value=latest
 
-    - name: Build and push Docker image
+    - name: Build and push Collector Docker image
       uses: docker/build-push-action@v6
       with:
         context: .
+        file: deployments/collector/Dockerfile
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        tags: ${{ steps.collector-meta.outputs.tags }}
+        labels: ${{ steps.collector-meta.outputs.labels }}
+        cache-from: type=gha,scope=collector
+        cache-to: type=gha,mode=max,scope=collector
+        annotations: |
+          org.opencontainers.image.visibility=public
+
+  build-and-push-validator:
+    name: Build and Push Validator Docker Image
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.24'
+
+    - name: Cache Go modules
+      uses: actions/cache@v4
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
+    - name: Download dependencies
+      run: go mod download
+
+    - name: Run tests
+      run: make test
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Extract validator metadata
+      id: validator-meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.VALIDATOR_IMAGE_NAME }}
+        tags: |
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
+          type=raw,value=latest
+
+    - name: Build and push Validator Docker image
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: deployments/validator/Dockerfile
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: ${{ steps.validator-meta.outputs.tags }}
+        labels: ${{ steps.validator-meta.outputs.labels }}
+        cache-from: type=gha,scope=validator
+        cache-to: type=gha,mode=max,scope=validator
         annotations: |
           org.opencontainers.image.visibility=public
